unpackaged/main/default/objects/Opportunity/fields/approvalBusinessSegment__c.field-meta.xml
<CustomField>
    <fullName>approvalBusinessSegment__c</fullName>
    <label>Approval Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>approvalBusinessSegmentList</valueSetName>
    </valueSet>
</CustomField>