unpackaged/main/default/objects/Opportunity/fields/Borrowers__c.field-meta.xml
<CustomField>
    <fullName>Borrowers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Borrowers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>