unpackaged/main/default/objects/Opportunity/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Segment</label>
    <length>128</length>
    <type>Text</type>
</CustomField>