unpackaged/main/default/objects/Opportunity/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>