unpackaged/main/default/objects/Opportunity/fields/First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Disbursement Date</label>
    <type>Date</type>
</CustomField>