unpackaged/main/default/objects/Opportunity/fields/First_Disbursement_Date_status__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Date_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Disbursement Date status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>