unpackaged/main/default/objects/Opportunity/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Governing Law</label>
    <length>128</length>
    <type>Text</type>
</CustomField>