unpackaged/main/default/objects/Opportunity/fields/governingLaw__c.field-meta.xml
<CustomField>
    <fullName>governingLaw__c</fullName>
    <label>Governing Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GoverningLawList</valueSetName>
    </valueSet>
</CustomField>