unpackaged/main/default/objects/Opportunity/fields/Guarantors__c.field-meta.xml
<CustomField>
    <fullName>Guarantors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantors</label>
    <length>50</length>
    <type>Text</type>
</CustomField>