unpackaged/main/default/objects/Opportunity/fields/iic_NewLeadSector__c.field-meta.xml
<CustomField>
    <fullName>iic_NewLeadSector__c</fullName>
    <label>Lead Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Sector</valueSetName>
    </valueSet>
</CustomField>