unpackaged/main/default/objects/Opportunity/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent</label>
    <type>Checkbox</type>
</CustomField>