unpackaged/main/default/objects/Opportunity/fields/Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Shareholders__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shareholders</label>
    <length>50</length>
    <type>Text</type>
</CustomField>