unpackaged/main/default/objects/Opportunity/fields/Signature_Date_status__c.field-meta.xml
<CustomField>
    <fullName>Signature_Date_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature Date status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>