unpackaged/main/default/objects/Opportunity/fields/Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Site_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Url</label>
    <length>40</length>
    <type>Text</type>
</CustomField>