unpackaged/main/default/objects/Opportunity/fields/Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Sponsors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sponsors</label>
    <length>50</length>
    <type>Text</type>
</CustomField>