unpackaged/main/default/objects/Opportunity/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>