unpackaged/main/default/objects/Opportunity/fields/Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>