unpackaged/main/default/objects/Opportunity/fields/Transaction_Number_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number_Ext_Id__c</fullName>
    <description>This field will have information about Unique Id from Integration Source : Maestro</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Opportunity ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>