unpackaged/main/default/objects/Opportunity/fields/Transaction_Stage__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>