unpackaged/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Transaction_Number_Ext_Id__c</columns>
    <columns>Transaction_Countries__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>